--- a/src/components/calculator/CalculatorUI.module.scss
+++ b/src/components/calculator/CalculatorUI.module.scss
@@ -98,6 +98,7 @@
 .calculatorBlock {
 	display: flex;
 	padding: 20px;
+	border-radius: 10px;
 	flex: 1 0 48%;
 	flex-direction: column;
 	background-color: $bgDefaultAccentBlock;
@@ -374,6 +375,52 @@
 			display: flex;
 			align-items: center;
 			justify-content: space-between;
+		}
+	}
+	.rangeOfRoomBlock {
+		margin-top: 20px;
+		margin-bottom: 20px;
+		label {
+			margin-bottom: 10px;
+			span {
+				color: $accent;
+			}
+		}
+		.customRange {
+			margin-top: 20px;
+			position: relative;
+			width: 100%;
+			height: 10px;
+			border-radius: 5px;
+			background-color: $fontColor;
+
+			.input {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				margin: 0;
+				padding: 0;
+				appearance: none;
+				background-color: transparent;
+				border: none;
+				outline: none;
+				&::-webkit-slider-thumb {
+					-webkit-appearance: none;
+					appearance: none;
+					width: 30px;
+					height: 30px;
+					background: $accent;
+					border-radius: 50%;
+					cursor: pointer;
+				}
+			}
+			.fill {
+				position: absolute;
+				height: 100%;
+				background-color: $accent;
+				border-radius: 5px;
+				transition: width 0.01s;
+			}
 		}
 	}
 }
