--- a/src/components/calculator/uiHome/CalculatorUIHome.module.scss
+++ b/src/components/calculator/uiHome/CalculatorUIHome.module.scss
@@ -1,15 +1,22 @@
+@import 'src/assets/styles/variables';
 .container {
 	position: fixed;
-	height: 50px;
-	width: 50px;
-	top: 50%;
+	height: 60px;
+	width: 60px;
+	top: 30%;
 	right: 0;
 	transform: translate(0, -50%);
-	background-color: #323232;
+	background-color: $bgdefault;
 	padding: 10px;
-	border: 1px solid #ccc;
+	z-index: 1000;
+	cursor: pointer;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
 	img {
-		width: 30px;
-		height: 30px;
+		width: 40px;
+		height: 40px;
 	}
+	// :hover {
+	// 	background-color: $bgDefaultAccentBlock;
+	// }
 }
