--- a/src/components/screens/contacts/contactsPage/ContactsPage.module.scss
+++ b/src/components/screens/contacts/contactsPage/ContactsPage.module.scss
@@ -16,6 +16,7 @@
 	flex-direction: column;
 	text-align: center;
 	margin-top: 20px;
+	margin-bottom: 20px;
 	.contentHeaderTitle {
 		margin: 0 auto;
 		font-size: 45px;
@@ -35,6 +36,7 @@
 		margin-bottom: 50px;
 		.contactsDescription {
 			&:nth-child(1) {
+				padding: 0px 10px;
 				.blockTagline {
 					font-size: 40px;
 					color: $fontColor;
@@ -176,7 +178,7 @@
 		display: flex;
 		flex-direction: column;
 		margin-top: 20px;
-		margin-bottom: 0px;
+		margin-bottom: 50px;
 	}
 
 	.containerHeader {
