--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -19,14 +19,15 @@
 		border-radius: 5px;
 		font-weight: 800;
 		height: 100%;
+		border: 1px solid $accent;
 		color: $black;
-		transition: background-color 0.3s ease;
+		transition: all 0.4s;
 		a {
 			text-decoration: none;
 			color: inherit;
 		}
 		&:hover {
-			color: $white;
+			color: $accent;
 			background-color: $bgDefaultAccent;
 		}
 	}
