--- a/src/components/ui/popup/styles.module.scss
+++ b/src/components/ui/popup/styles.module.scss
@@ -62,6 +62,7 @@
 	left: 0;
 	width: 100%;
 	height: 100vh;
+	overflow: auto;
 	background-color: rgba(0, 0, 0, 0.96);
 	z-index: 999;
 	animation: fadeIn 0.4s ease forwards;
@@ -70,13 +71,17 @@
 	}
 }
 
-.modal-content {
+.modalContent {
 	background-color: rgb(35, 35, 35);
 	padding: 20px 20px;
 	border-radius: 5px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 	position: relative;
-	width: 500px;
+	max-width: 1200px;
+	&.type {
+		margin: 20px;
+		padding: 0;
+	}
 	.feedbackFormTitle {
 		font-size: clamp(18px, 25px, 30px);
 		font-weight: 800;
@@ -114,7 +119,10 @@
 			animation: fadeOut 0.3s ease forwards;
 		}
 	}
-	.modal-content {
+	.modalContent {
 		margin: 0 20px;
+		&.type {
+			top: 200px;
+		}
 	}
 }
