--- a/src/components/wrapperServices/serviceCard/ServiceCard.module.scss
+++ b/src/components/wrapperServices/serviceCard/ServiceCard.module.scss
@@ -133,15 +133,17 @@
 }
 
 .hoverContent::before {
-	content: 'Особое условие!';
+	content: attr(data-count);
 	position: absolute;
-	top: -50px; /* Начальное положение за пределами блока */
-	left: 0;
-	font-size: 20px;
-	width: 100%;
+	top: -50px;
+	left: 50px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	font-size: clamp(15px, 3vw, 20px);
+	width: 80%;
 	padding: 10px;
 	background-color: rgba(123, 123, 123, 0.7);
-	color: white;
+	color: $accent;
 	font-weight: bold;
 	text-align: center;
 	box-sizing: border-box;
