code rewiews mobile home page17

--- a/src/components/calculator/uiHome/CalculatorUIHome.module.scss
+++ b/src/components/calculator/uiHome/CalculatorUIHome.module.scss
@@ -3,7 +3,7 @@
 	position: fixed;
 	height: 60px;
 	width: 60px;
-	top: 30%;
+	top: 280px;
 	right: 0;
 	transform: translate(0, -50%);
 	background-color: $bgdefault;
@@ -16,7 +16,4 @@
 		width: 40px;
 		height: 40px;
 	}
-	// :hover {
-	// 	background-color: $bgDefaultAccentBlock;
-	// }
 }
