--- a/src/components/ui/portfolioCart/PortfolioCart.module.scss
+++ b/src/components/ui/portfolioCart/PortfolioCart.module.scss
@@ -5,7 +5,7 @@
 .modalContent {
 	backdrop-filter: blur(10px);
 	background-color: $bgDefaultAccentBlock;
-	padding: 40px 40px 20px 40px;
+	padding: 20px 20px 20px 20px;
 	border-radius: 5px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 	max-width: 1300px;
@@ -14,9 +14,9 @@
 	}
 	.close {
 		position: absolute;
-		top: 0px;
+		top: -5px;
 		z-index: 500;
-		right: 20px;
+		right: 2px;
 		cursor: pointer;
 		font-size: 30px;
 		color: #d0d0d0;
@@ -37,15 +37,15 @@
 			line-height: 1;
 			margin-bottom: 20px;
 			color: rgb(255, 205, 67);
-			font-size: 40px;
+			font-size: clamp(30px, 3vw, 40px);
 			font-weight: bold;
 		}
 		.descriptionInfoObject {
-			font-size: 20px;
+			font-size: clamp(15px, 3vw, 20px);
 		}
 		.descriptionWorkBeenDone {
 			color: rgb(115, 115, 115);
-			font-size: 15px;
+			font-size: clamp(12px, 3vw, 15px);
 		}
 	}
 	.descriptionContainerButton {
@@ -75,15 +75,14 @@
 
 @media only screen and (max-width: 767px) {
 	.modalContent {
-		padding: 40px 20px 10px 20px;
+		overflow: visible;
+		position: relative;
+		padding: 20px 20px 20px 20px;
 		border-radius: 5px;
 		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 		max-width: 400px;
 		.close {
 			position: absolute;
-			top: 0px;
-			z-index: 500;
-			right: 20px;
 			cursor: pointer;
 			font-size: 30px;
 			color: #d0d0d0;
@@ -105,21 +104,15 @@
 				margin-top: 10px;
 				margin-bottom: 10px;
 				color: rgb(255, 205, 67);
-				font-size: clamp(30px, 35px, 40px);
 				font-weight: bold;
 			}
-			.descriptionInfoObject {
-				font-size: 20px;
-			}
 			.descriptionWorkBeenDone {
-				color: rgb(115, 115, 115);
-				font-size: 15px;
+				margin-top: 10px;
 			}
 		}
 		.descriptionContainerButton {
 			display: flex;
 			margin-top: 20px;
-			margin-bottom: 20px;
 			gap: 10px;
 		}
 		.descriptionButton {
@@ -135,7 +128,7 @@
 }
 @media only screen and (max-width: 420px) {
 	.modalContent {
-		padding: 40px 20px 10px 20px;
+		padding: 20px 20px 10px 20px;
 		border-radius: 5px;
 		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 		max-width: 400px;
