--- a/src/components/wraperPortfolio/sliderMain/SliderMain.module.scss
+++ b/src/components/wraperPortfolio/sliderMain/SliderMain.module.scss
@@ -61,6 +61,14 @@
 	overflow: hidden;
 	width: 100%;
 	border-radius: 5px;
+	transition: transform 0.5s ease;
+	&.forward {
+		transform: translateX(100%);
+	}
+
+	&.backward {
+		transform: translateX(-100%);
+	}
 	img {
 		border-radius: 5px;
 		position: relative;
