--- a/src/components/ui/popup/styles.module.scss
+++ b/src/components/ui/popup/styles.module.scss
@@ -61,7 +61,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100vh;
+	height: 100dvb;
 	overflow: auto;
 	background-color: rgba(0, 0, 0, 0.96);
 	z-index: 999;
@@ -122,7 +122,7 @@
 	.modalContent {
 		margin: 0 20px;
 		&.type {
-			top: 150px;
+			top: 100px;
 		}
 	}
 }
