--- a/src/components/ui/popup/viewObject/ViewObject.module.scss
+++ b/src/components/ui/popup/viewObject/ViewObject.module.scss
@@ -24,8 +24,9 @@
 	justify-content: center;
 	align-items: center;
 	position: fixed;
-	top: 30px;
+	top: 0;
 	left: 0;
+	margin: 20px 0px;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.914);
