--- a/src/components/ui/button/Button.module.scss
+++ b/src/components/ui/button/Button.module.scss
@@ -18,7 +18,7 @@
 		border: none;
 		border-radius: 5px;
 		font-weight: 800;
-		height: 100%;
+		// height: 100%;
 		border: 1px solid $accent;
 		color: $black;
 		transition: all 0.4s;
