--- a/src/components/ui/portfolioCart/PortfolioCart.module.scss
+++ b/src/components/ui/portfolioCart/PortfolioCart.module.scss
@@ -45,7 +45,7 @@
 		}
 		.descriptionWorkBeenDone {
 			color: rgb(115, 115, 115);
-			font-size: clamp(12px, 3vw, 15px);
+			font-size: clamp(14px, 3vw, 17px);
 		}
 	}
 	.descriptionContainerButton {
@@ -77,7 +77,7 @@
 	.modalContent {
 		overflow: visible;
 		position: relative;
-		padding: 20px 20px 20px 20px;
+		padding: 30px 20px 20px 20px;
 		border-radius: 5px;
 		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 		max-width: 400px;
@@ -108,6 +108,9 @@
 			}
 			.descriptionWorkBeenDone {
 				margin-top: 10px;
+				height: 60px;
+				scrollbar-color: rgb(220, 207, 34) yellow;
+				overflow: auto;
 			}
 		}
 		.descriptionContainerButton {
