--- a/src/components/header/navigation/Navbar.module.scss
+++ b/src/components/header/navigation/Navbar.module.scss
@@ -3,7 +3,7 @@
 	&.open {
 		position: absolute;
 		padding: 20px 30px 10px 30px;
-		background-color: rgba(30, 30, 30, 0.936);
+		background-color: rgb(19 19 19 / 99%);
 		width: 100%;
 	}
 	ul {
@@ -54,16 +54,17 @@
 		display: block;
 		position: absolute;
 		top: 100%;
-		left: -20px;
+		left: 0px;
 		width: 300px;
 		z-index: 10000;
 		border-radius: 10px;
-		background-color: $black;
+		background-color: rgb(29, 29, 29);
+		padding-bottom: 10px;
 
 		li {
 			padding: 0px 20px;
-			margin-bottom: 20px;
-			margin-top: 20px;
+			margin-bottom: 10px;
+			margin-top: 15px;
 
 			a {
 				color: $fontColor;
@@ -90,18 +91,57 @@
 @media only screen and (max-width: 767px) {
 	.menu {
 		position: absolute;
-		height: 100vh;
+		display: flex;
+		flex-direction: column;
 
+		justify-content: space-between;
+		height: calc(100vh - 70px);
+
+		&.open {
+			padding: 20px 30px 20px 30px;
+		}
 		ul {
-			gap: 40px;
+			gap: 30px;
 			flex-direction: column;
 			align-items: start;
 			font-size: 25px;
+		}
+		.socialLinkMobileHeader {
+			margin-bottom: 10px;
+			.container {
+				display: flex;
+				flex-direction: column;
+				gap: 20px;
+				.socialLink {
+					display: flex;
+					gap: 10px;
+					img {
+						width: 30px;
+						height: 30px;
+					}
+				}
+				.containerNumber {
+					display: flex;
+					gap: 5px;
+					flex-direction: column;
+					.number {
+						font-size: 20px;
+						color: $accent;
+						font-weight: 800;
+					}
+					.description {
+						font-size: 16px;
+						color: $fontColorAccent;
+					}
+				}
+			}
 		}
 	}
 	.dropdown {
 		.submenu {
 			position: relative;
+			background-color: rgba(0, 0, 0, 0);
+			padding-bottom: 0;
 			li {
 				a {
 					font-size: 16px;
