--- a/src/components/landingPage/wrapperStageWork/WrapperStagesWork.module.scss
+++ b/src/components/landingPage/wrapperStageWork/WrapperStagesWork.module.scss
@@ -133,11 +133,15 @@
 .WrapperDescriptionButton {
 	flex: 1 0 20%;
 	font-weight: 800;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	text-align: center;
 	border-radius: 10px;
-	font-size: 25px;
+	font-size: 28px;
+	background-color: $bgDefaultAccentBlock;
 	padding: 10px;
-	border: 2px solid $accent;
+	// border: 2px solid #7d7d7d;
 	cursor: pointer;
 	transition: border 0.5s ease, color 0.5s ease, background-color 0.5s ease;
 	&:hover {
