--- a/src/components/landingPage/wrapperTeam/carousel/Carousel.scss
+++ b/src/components/landingPage/wrapperTeam/carousel/Carousel.scss
@@ -19,8 +19,8 @@
 	background-color: $bgDefaultAccentBlock;
 	height: 400px;
 	cursor: pointer;
-	background-image: url('/static/DSC08377.jpg');
-	background-size: cover; /* чтобы изображение занимало всю доступную область */
+	// background-image: url('/static/DSC08377.jpg');
+	background-size: cover;
 	background-position: center;
 }
 .carouselTitle {
@@ -51,6 +51,7 @@
 		border-radius: 10px;
 		padding: 10px;
 		backdrop-filter: blur(10px);
+		-webkit-backdrop-filter: blur(10px);
 		background-color: $bgdefault;
 		span {
 			color: $fontColorAccent;
