--- a/src/components/header/navigation/Navbar.module.scss
+++ b/src/components/header/navigation/Navbar.module.scss
@@ -98,7 +98,7 @@
 		height: calc(100vh - 70px);
 
 		&.open {
-			padding: 20px 30px 20px 30px;
+			padding: 10px 30px 20px 30px;
 		}
 		ul {
 			gap: 30px;
@@ -107,12 +107,20 @@
 			font-size: 25px;
 		}
 		.socialLinkMobileHeader {
-			margin-bottom: 10px;
+			margin-bottom: 80px;
 			.container {
 				display: flex;
 				flex-direction: column;
-				gap: 20px;
+				gap: 5px;
 				.socialLink {
+					.container {
+						display: flex;
+						justify-content: center;
+						align-items: center;
+						background-color: #3c3c3c;
+						padding: 10px;
+						border-radius: 10px;
+					}
 					display: flex;
 					gap: 10px;
 					img {
