--- a/src/components/header/navigation/Navbar.module.scss
+++ b/src/components/header/navigation/Navbar.module.scss
@@ -114,6 +114,7 @@
 				gap: 5px;
 				.socialLink {
 					.container {
+						cursor: pointer;
 						display: flex;
 						justify-content: center;
 						align-items: center;
