--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -14,12 +14,28 @@
 	width: 100%;
 	display: flex;
 }
+.containerNumber {
+	margin-top: 20px;
+	display: flex;
+	gap: 5px;
+	flex-direction: column;
+	.number {
+		font-size: 18px;
+		color: $accent;
+		font-weight: 800;
+	}
+	.description {
+		font-size: 14px;
+		color: $fontColorAccent;
+	}
+}
 .basementNavigation {
 	flex: 1 0 70%;
 	padding-top: 20px;
+	margin-bottom: 20px;
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 10px;
 	padding-right: 20px;
 	color: $fontColor;
 	font-weight: 800;
@@ -34,7 +50,7 @@
 }
 .navigationInfoSocialLink {
 	display: flex;
-	gap: 20px;
+	gap: 5px;
 	width: fit-content;
 }
 .socialLink {
@@ -96,5 +112,20 @@
 	}
 	.navigationInfoCampania {
 		font-size: 15px;
+	}
+	.containerNumber {
+		margin-top: 20px;
+		display: flex;
+		gap: 5px;
+		flex-direction: column;
+		.number {
+			font-size: 16px;
+			color: $accent;
+			font-weight: 800;
+		}
+		.description {
+			font-size: 12px;
+			color: $fontColorAccent;
+		}
 	}
 }
