--- a/src/components/ui/socialLink/SocialLink.module.scss
+++ b/src/components/ui/socialLink/SocialLink.module.scss
@@ -1,11 +1,33 @@
-.itemSocialLink {
+.socialLink {
+	.container {
+		cursor: pointer;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: #3c3c3c;
+		padding: 5px;
+		border-radius: 5px;
+	}
 	display: flex;
-	width: 100%;
-	justify-content: center;
-	border-radius: 10px;
-	align-items: center;
+	gap: 10px;
 	img {
-		width: 30px;
-		height: 30px;
+		width: 20px;
+		height: 20px;
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	.container {
+		cursor: pointer;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: #3c3c3c;
+		padding: 10px;
+		border-radius: 10px;
+		img {
+			width: 30px;
+			height: 30px;
+		}
 	}
 }
