--- a/src/components/screens/contacts/contactsPage/ContactsPage.module.scss
+++ b/src/components/screens/contacts/contactsPage/ContactsPage.module.scss
@@ -38,8 +38,8 @@
 		flex: 1 0 33%;
 		display: flex;
 		flex-direction: column;
+		gap: 20px;
 		margin-top: 20px;
-		margin-bottom: 50px;
 		.contactsDescription {
 			&:nth-child(1) {
 				padding: 0px 10px;
@@ -153,7 +153,6 @@
 	}
 	.containerContactsFormAction {
 		flex: 1 0 33%;
-		height: 400px;
 		background-color: $bgdefault;
 		border-radius: 10px;
 		margin-top: 20px;
@@ -161,7 +160,6 @@
 	}
 	.containerContactsFormCart {
 		flex: 1 0 33%;
-		height: 400px;
 		background-color: $bgdefault;
 		border-radius: 10px;
 		margin-top: 20px;
@@ -325,7 +323,6 @@
 		}
 		.containerContactsFormCart {
 			flex: 1 0 53%;
-			height: 400px;
 			background-color: $bgdefault;
 			border-radius: 10px;
 			margin-top: 20px;
