--- a/src/components/ui/formFeedback/FormFeedback.module.scss
+++ b/src/components/ui/formFeedback/FormFeedback.module.scss
@@ -24,6 +24,14 @@
 			margin-bottom: 5px;
 		}
 	}
+	.inputBlock {
+		span {
+			display: block;
+			margin-left: 5px;
+			margin-bottom: 10px;
+			color: red;
+		}
+	}
 
 	& label {
 		display: block;
@@ -81,11 +89,13 @@
 			background-color: $accent;
 			color: $black;
 		}
-
-		&:active,
-		&:focus {
-			background-color: #e5e5e5;
-			box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
+	}
+	.policy {
+		margin: 20px 0px 5px 0px;
+		text-align: center;
+		a {
+			color: $fontColorAccentV2;
+			text-decoration: underline;
 		}
 	}
 }
