--- a/src/components/wrappers/banner/HomeBanner.module.scss
+++ b/src/components/wrappers/banner/HomeBanner.module.scss
@@ -7,6 +7,9 @@
 	margin: 0 auto;
 	max-width: 1280px;
 	border-radius: 5px;
+	@media screen and (max-width: 1280px) {
+		margin: 0 20px;
+	}
 }
 
 .bannerInfo {
@@ -24,7 +27,7 @@
 		width: 100%;
 		z-index: 4;
 		border-radius: 0.8vw;
-		font-size: 3.125vw;
+		font-size: 48px;
 		line-height: 1;
 		font-weight: bold;
 		color: $fontColor;
