--- a/src/components/footer/footerSignature/FooterSignature.module.scss
+++ b/src/components/footer/footerSignature/FooterSignature.module.scss
@@ -23,6 +23,11 @@
 		span {
 			color: $fontColor;
 		}
+		.InfoRights {
+			a {
+				color: gray;
+			}
+		}
 	}
 	.containerDeveloper {
 		color: $fontColor;
